--- a/docs/notebooks/L9/Simulating-the-diffusion-equation.ipynb
+++ b/docs/notebooks/L9/Simulating-the-diffusion-equation.ipynb
@@ -2,57 +2,82 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d8cb72fe",
-   "metadata": {},
+   "id": "e6569bd4",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/Hallatscheklab/SoftMatter22-23/blob/main/source/notebooks/L9/Simulating-the-diffusion-equation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "KypQvVV84qNl",
+   "metadata": {
+    "id": "KypQvVV84qNl"
+   },
    "source": [
     "# Simulating Molecular Motors walking down a microtubule"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8859c11d",
-   "metadata": {},
+   "id": "0Xaj-CEi4qNn",
+   "metadata": {
+    "id": "0Xaj-CEi4qNn"
+   },
    "source": [
     "In lecture, we discussed the evolution of the positional distribution function of a molecular motor that processively walks down a biopolymer (e.g. Kinesin V walking down a microtubule). In the simplest models, this distribution function satisfies a Smoluchowski equation of the following form. The probability density to observe the walker at position $x$ at time $t$ is given by"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fde1b411",
-   "metadata": {},
+   "id": "YUz7uHkn4qNn",
+   "metadata": {
+    "id": "YUz7uHkn4qNn"
+   },
    "source": [
     "$$ \\partial_t p(x,t)= D \\partial_x^2 p - v \\partial_x p $$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb3cb1c4",
-   "metadata": {},
+   "id": "r9GLs43z4qNn",
+   "metadata": {
+    "id": "r9GLs43z4qNn"
+   },
    "source": [
     "where $D$ is the diffusivity of the walker and $v$ is its velocity."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5fb896f",
-   "metadata": {},
+   "id": "c1lXmJB44qNo",
+   "metadata": {
+    "id": "c1lXmJB44qNo"
+   },
    "source": [
     "Here, we'd like to directly time integrate the above equation to see how the pdf evolves over time. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d649d7a0",
-   "metadata": {},
+   "id": "DoIQFR8v4qNo",
+   "metadata": {
+    "id": "DoIQFR8v4qNo"
+   },
    "source": [
     "Initializing the simulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "48374268",
-   "metadata": {},
+   "execution_count": null,
+   "id": "ajVRcc634qNo",
+   "metadata": {
+    "id": "ajVRcc634qNo"
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -90,17 +115,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83dbdd26",
-   "metadata": {},
+   "id": "a8dbbUx44qNp",
+   "metadata": {
+    "id": "a8dbbUx44qNp"
+   },
    "source": [
     "The core simulation algorithm."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "78a645fc",
-   "metadata": {},
+   "execution_count": null,
+   "id": "aE-WBpJN4qNp",
+   "metadata": {
+    "id": "aE-WBpJN4qNp"
+   },
    "outputs": [],
    "source": [
     "def do_timestep(u0, u):\n",
@@ -115,17 +144,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "858e23b3",
-   "metadata": {},
+   "id": "IMqBXxPd4qNq",
+   "metadata": {
+    "id": "IMqBXxPd4qNq"
+   },
    "source": [
     "Running the simulations and plotting the output at regular time intervals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "b2701765",
-   "metadata": {},
+   "execution_count": null,
+   "id": "C83h97bL4qNq",
+   "metadata": {
+    "id": "C83h97bL4qNq",
+    "outputId": "4c8b90fa-de78-4349-bf2b-12fd8524eda1"
+   },
    "outputs": [
     {
      "data": {
@@ -162,17 +196,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a915099",
-   "metadata": {},
+   "id": "SQIboYWF4qNq",
+   "metadata": {
+    "id": "SQIboYWF4qNq"
+   },
    "source": [
     "### In the co-moving frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "d22eaa94",
-   "metadata": {},
+   "execution_count": null,
+   "id": "oXvfytkM4qNq",
+   "metadata": {
+    "id": "oXvfytkM4qNq",
+    "outputId": "4dcc2db1-d07a-4f69-ba4f-00cbea2cb07c"
+   },
    "outputs": [
     {
      "data": {
@@ -213,25 +252,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "378e55d1",
-   "metadata": {},
+   "id": "zCMOSJSx4qNr",
+   "metadata": {
+    "id": "zCMOSJSx4qNr"
+   },
    "source": [
     "### Diffusion equation without bias"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2497aaa6",
-   "metadata": {},
+   "id": "QUYpWB2T4qNr",
+   "metadata": {
+    "id": "QUYpWB2T4qNr"
+   },
    "source": [
     "Only works far away from the boundaries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "54d8b592",
-   "metadata": {},
+   "execution_count": null,
+   "id": "Ay1_obuO4qNr",
+   "metadata": {
+    "id": "Ay1_obuO4qNr"
+   },
    "outputs": [],
    "source": [
     "def do_timestep(u0, u):\n",
@@ -245,9 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "18efc79f",
-   "metadata": {},
+   "execution_count": null,
+   "id": "tyqOg9Le4qNr",
+   "metadata": {
+    "id": "tyqOg9Le4qNr",
+    "outputId": "aad543ed-62c7-401c-87cd-f561e1ac2eb7"
+   },
    "outputs": [
     {
      "data": {
@@ -284,31 +332,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba4b27c",
-   "metadata": {},
+   "id": "eP2n76VR4qNr",
+   "metadata": {
+    "id": "eP2n76VR4qNr"
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2ead0985",
-   "metadata": {},
+   "id": "6mIxUuiw4qNr",
+   "metadata": {
+    "id": "6mIxUuiw4qNr"
+   },
    "source": [
     "### Diffusion in two dimensions"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7d34c62b",
-   "metadata": {},
+   "id": "lAH8LeIq4qNr",
+   "metadata": {
+    "id": "lAH8LeIq4qNr"
+   },
    "source": [
     "An example of a two dimensional diffusion process is the diffusion of heat from a circular source across a rectangular plate. The initial temperature is `Tcold` and the temperature of the heat source is `Thot`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "df5db963",
-   "metadata": {},
+   "execution_count": null,
+   "id": "qm87Vpc04qNr",
+   "metadata": {
+    "id": "qm87Vpc04qNr",
+    "outputId": "c7cf90a4-30a7-4be1-b2ea-bf594e46fda6"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -396,8 +453,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ecb3e1",
-   "metadata": {},
+   "id": "eLlmxyWB4qNs",
+   "metadata": {
+    "id": "eLlmxyWB4qNs"
+   },
    "source": [
     "## Charges surfaces in solution, no salt\n",
     "\n",
@@ -414,16 +473,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a80d824f",
-   "metadata": {},
+   "id": "n8zL4wvB4qNs",
+   "metadata": {
+    "id": "n8zL4wvB4qNs"
+   },
    "source": [
     "## Poisson-Boltzmann equation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "758172c9",
-   "metadata": {},
+   "id": "38UNeVaO4qNs",
+   "metadata": {
+    "id": "38UNeVaO4qNs"
+   },
    "source": [
     "If we name the electrostatic potential $\\psi$ and number density of ions of a valancy $z$ $\\rho$, we can on one side write down the Boltzmann equation\n",
     "\n",
@@ -448,12 +511,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a08b4329",
-   "metadata": {},
+   "id": "_T3H3jNd4qNs",
+   "metadata": {
+    "id": "_T3H3jNd4qNs"
+   },
    "source": [
     "In the following we would like to determine the surface values for the potential $\\psi_s$, the electric field $E_s$ and the density $\\rho_s$, which are called contact values. We will do that for a system of two solid surfaces each with a surface charge density $\\sigma$ according to the configuration shown below.\n",
     "\n",
-    "![Config](img/configuration.png)\n",
+    "![Config](https://github.com/Hallatscheklab/SoftMatter22-23/blob/main/source/notebooks/L9/img/configuration.png?raw=1)\n",
     "\n",
     "This system is symmetric with respect to the mid-plane at $x=0$ and thus the potential is $\\psi_0=\\psi(x=0)=0$ and the charge number density is $\\rho_o=\\rho(x=0)$. Also, due to symmetry we have $\\frac{d\\psi}{dx}|_{x=0}=0$. It follows from this symmetry that\n",
     "\n",
@@ -490,8 +555,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b8d83df",
-   "metadata": {},
+   "id": "azwIjFiI4qNs",
+   "metadata": {
+    "id": "azwIjFiI4qNs"
+   },
    "source": [
     "The term $\\frac{d\\psi}{dx}$, which appears as a square in the last formula is just the electric field evaluated at the position $x$. With the contact value of the electric field $E_s$ obtained above, we can immediately write the contact value of the charge number density as \n",
     "\n",
@@ -506,8 +573,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca0426a",
-   "metadata": {},
+   "id": "n_QnKtVH4qNs",
+   "metadata": {
+    "id": "n_QnKtVH4qNs"
+   },
    "source": [
     "To obtain the charge number density, the potential and the electric field we must solve the Poisson Boltzmann equation. The solution in the case of no additional electrolyte is given by\n",
     "\n",
@@ -548,16 +617,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096ae61b",
-   "metadata": {},
+   "id": "Y_LGI7Xj4qNs",
+   "metadata": {
+    "id": "Y_LGI7Xj4qNs"
+   },
    "source": [
     "### Example"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7537de4d",
-   "metadata": {},
+   "id": "2xcdLbyA4qNs",
+   "metadata": {
+    "id": "2xcdLbyA4qNs"
+   },
    "source": [
     "Two surfaces with a charge density of $\\sigma=0.2\\, C\\cdot m^{-2}$ are at a distance of $D=2 nm$ in water at $T=293\\,K$. We calculate the counter ion surface charge, the charge density, the electric field and the potential inside the water film between the two layers. We therefore first calculate a value of\n",
     "\n",
@@ -570,9 +643,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "id": "4c6a487f",
-   "metadata": {},
+   "execution_count": null,
+   "id": "HX-Mmd-m4qNs",
+   "metadata": {
+    "id": "HX-Mmd-m4qNs"
+   },
    "outputs": [],
    "source": [
     "sigma=0.2 # C/m^2\n",
@@ -585,17 +660,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21a41d3a",
-   "metadata": {},
+   "id": "tmNAQRrl4qNs",
+   "metadata": {
+    "id": "tmNAQRrl4qNs"
+   },
    "source": [
     "With the help of the previous definitions, we may search for the solution which gives the value of $K$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "id": "f37fd545",
-   "metadata": {},
+   "execution_count": null,
+   "id": "pBioY2dB4qNs",
+   "metadata": {
+    "id": "pBioY2dB4qNs"
+   },
    "outputs": [],
    "source": [
     "# numerically solve for K\n",
@@ -606,17 +685,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dd18a18",
-   "metadata": {},
+   "id": "kMvBgj1o4qNs",
+   "metadata": {
+    "id": "kMvBgj1o4qNs"
+   },
    "source": [
     "#### Plot of the charge density"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "id": "ae33d691",
-   "metadata": {},
+   "execution_count": null,
+   "id": "RBls_qZf4qNt",
+   "metadata": {
+    "id": "RBls_qZf4qNt"
+   },
    "outputs": [],
    "source": [
     "# ion density in the mid plane\n",
@@ -625,9 +708,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "id": "b55d7abc",
-   "metadata": {},
+   "execution_count": null,
+   "id": "ALLijCyL4qNt",
+   "metadata": {
+    "id": "ALLijCyL4qNt",
+    "outputId": "f5002267-3333-4249-8273-0334ac68142d"
+   },
    "outputs": [
     {
      "data": {
@@ -657,17 +743,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b32076",
-   "metadata": {},
+   "id": "53ER6LwK4qNt",
+   "metadata": {
+    "id": "53ER6LwK4qNt"
+   },
    "source": [
     "#### Plot of the electric potential"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
-   "id": "c403ef88",
-   "metadata": {},
+   "execution_count": null,
+   "id": "gBXzKjQ74qNt",
+   "metadata": {
+    "id": "gBXzKjQ74qNt",
+    "outputId": "d36ab221-dc2f-404e-8549-7feaef900af4"
+   },
    "outputs": [
     {
      "data": {
@@ -706,17 +797,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f8f754",
-   "metadata": {},
+   "id": "GQgFsT_94qNt",
+   "metadata": {
+    "id": "GQgFsT_94qNt"
+   },
    "source": [
     "#### Plot of the electric field"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
-   "id": "1b9b371d",
-   "metadata": {},
+   "execution_count": null,
+   "id": "s58tKKky4qNt",
+   "metadata": {
+    "id": "s58tKKky4qNt",
+    "outputId": "aef1347f-8e4d-4aec-ff07-ab3f253587af"
+   },
    "outputs": [
     {
      "data": {
@@ -756,13 +852,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b30c0b3",
-   "metadata": {},
+   "id": "SXE1JKaP4qNt",
+   "metadata": {
+    "id": "SXE1JKaP4qNt"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "include_colab_link": true,
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -792,13 +894,6 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
-  },
-  "widgets": {
-   "application/vnd.jupyter.widget-state+json": {
-    "state": {},
-    "version_major": 2,
-    "version_minor": 0
-   }
   }
  },
  "nbformat": 4,
