--- a/docs/notebooks/L4/2_Gibbs_Distribution.ipynb
+++ b/docs/notebooks/L4/2_Gibbs_Distribution.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Hallatscheklab/SoftMatter22-23/blob/main/source/notebooks/L4/2_Gibbs_Distribution.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Particle exchange and chemical potential"
    ]
   },
